--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ header {
     background-color: darkslategray;
     color: rgb(233, 229, 204);
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
@@ -17,10 +18,17 @@ h1 {
 }
 
 .nav-links {
+    display: flex;
+    justify-content: flex-end;
     margin-right: 10px;
     padding: 10px;
     list-style-type: none;
     color: rgb(233, 229, 204);
+}
+
+li {
+    margin-right: 10px;
+    padding: 5px;
 }
 
 a {
