--- a/assets/style.css
+++ b/assets/style.css
@@ -9,17 +9,18 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 h1 {
     margin-left: 10px;
     padding: 10px;
     display: flex;
+    font-size: 40px;
 }
 
 .nav-links {
     display: flex;
-    justify-content: flex-end;
     margin-right: 10px;
     padding: 10px;
     list-style-type: none;
@@ -43,7 +44,21 @@ a:active {
     color: rgb(233, 229, 204);
 }
 
+a:hover
+{
+    font-size: 25px;
+}
 h2 {
     color: darkslategray;
     text-decoration: underline;
+}
+
+p {
+    margin: 20px;
+}
+
+#portfolio-image {
+    height: 200px;
+    width: 200px;
+    margin-right: 15px;
 }
