--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+
+/* font-family for the entire page */
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -27,12 +29,12 @@ h1 {
     color: rgb(233, 229, 204);
 }
 
-li {
+.nav-links li {
     margin-right: 10px;
     padding: 5px;
 }
 
-a {
+.nav-links a {
     color: rgb(233, 229, 204);
     text-decoration: none;
     font-size: x-large;
@@ -44,13 +46,27 @@ a:active {
     color: rgb(233, 229, 204);
 }
 
-a:hover
+.nav-links a:hover
 {
     font-size: 25px;
 }
+
+section {
+    padding: 10px;
+}
+
 h2 {
     color: darkslategray;
     text-decoration: underline;
+}
+
+h3 {
+    color: rgb(233, 229, 204);
+    background-color: darkslategray;
+}
+
+h4 {
+    color: darkslategray;
 }
 
 p {
@@ -62,3 +78,39 @@ p {
     width: 200px;
     margin-right: 15px;
 }
+
+.project-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.primary-project {
+    border-style: solid;
+    border-color: darkslategray;
+    border-width: 2px;
+    margin: 5px;
+}
+
+.secondary-project {
+    border-style: solid;
+    border-color: darkslategray;
+    border-width: 2px;
+    margin: 5px;
+}
+
+.project-label { 
+    position: relative;
+    bottom: 50px;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+
